feat: Erster Stand

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ speed-measure-plugin*.json
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+# !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
 
@@ -40,6 +40,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+*.log
 
 # System Files
 .DS_Store
